tests/ui/type-alias-impl-trait/constrain_inputs.stderr
error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/constrain_inputs.rs:6:31
   |
LL |     fn execute(ty: Ty<'_>) -> &str { todo!() }
   |                               ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/constrain_inputs.rs:10:35
   |
LL |     type BadFnSig = fn(Ty<'_>) -> &str;
   |                                   ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0582]: binding for associated type `Output` references an anonymous lifetime, which does not appear in the trait input types
  --> $DIR/constrain_inputs.rs:12:42
   |
LL |     type BadTraitRef = dyn Fn(Ty<'_>) -> &str;
   |                                          ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error: item does not constrain `lifetime_params::Ty::{opaque#0}`, but has it in its signature
  --> $DIR/constrain_inputs.rs:6:8
   |
LL |     fn execute(ty: Ty<'_>) -> &str { todo!() }
   |        ^^^^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/constrain_inputs.rs:4:19
   |
LL |     type Ty<'a> = impl Sized;
   |                   ^^^^^^^^^^

error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/constrain_inputs.rs:19:31
   |
LL |     fn execute(ty: Ty<'_>) -> &str { ty() }
   |                               ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error: item does not constrain `lifetime_params_2::Ty::{opaque#0}`, but has it in its signature
  --> $DIR/constrain_inputs.rs:19:8
   |
LL |     fn execute(ty: Ty<'_>) -> &str { ty() }
   |        ^^^^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/constrain_inputs.rs:17:19
   |
LL |     type Ty<'a> = impl FnOnce() -> &'a str;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0581]: return type references an anonymous lifetime, which is not constrained by the fn input types
  --> $DIR/constrain_inputs.rs:29:37
   |
LL |     type BadFnSig = fn(Ty<&str>) -> &str;
   |                                     ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error[E0582]: binding for associated type `Output` references an anonymous lifetime, which does not appear in the trait input types
  --> $DIR/constrain_inputs.rs:31:44
   |
LL |     type BadTraitRef = dyn Fn(Ty<&str>) -> &str;
   |                                            ^^^^
   |
   = note: lifetimes appearing in an associated or opaque type are not considered constrained
   = note: consider introducing a named lifetime parameter

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0581, E0582.
For more information about an error, try `rustc --explain E0581`.
